# LocalBook

./: .gitignore  CHANGELOG.md  CLAUDE.md  FLASHCARDS_IMPROVEMENTS.md  LICENSE  README.md  build.sh  index.html  install.sh  migrate_data.sh  package-lock.json  package.json  release.sh  start.sh  test_fetch.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
.windsurf/: agent-commands.md
backend/: .env.example  _functional_smoke.py  _livingview_test.py  _phase5_test.py  _probe_test.py  _runprofile_test.py  _scoring_fairness_test.py  _wave1_embed_test.py  _wave2_spacy_test.py  build_backend.sh  config.py  main.py  requirements.in  requirements.txt  version.py
backend/agents/: __init__.py  _bootstrap_sources.py  carr_graph.py  collection_graph.py  collector.py  correspondent.py  curator.py  state.py  supervisor.py  tools.py  weekly_journal_agent.py
backend/api/: agent.py  agent_browser.py  articles.py  audio.py  audio_llm.py  auth.py  browser.py  browser_transform.py  canvas_notes.py  capture.py  chat.py  collector.py  comparison.py  constellation_ws.py  content.py  contradictions.py  correspondent.py  credentials.py  curator.py  embeddings.py  evaluator.py  exploration.py  export.py  findings.py  flashcards.py  graph.py  health_portal.py  jobs.py  memory.py  (+23 more)
docs/: BUILD_ARCHITECTURE.md
extension/: .gitignore  background.ts  package-lock.json  package.json  popup.tsx  sidepanel.tsx  tsconfig.tsbuildinfo  types.ts
scripts/: check_pyinstaller_hidden_imports.py
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: continuity.rs  lib.rs  main.rs  tray.rs
src-tauri/tools/continuity-camera/: ContinuityCamera-Info.plist  ContinuityCamera.entitlements  ContinuityCamera.swift  build.sh
(+513 files in other folders)
