[package]
name = "localbooklm"
version = "1.6.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "localbooklm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
notify = "6.1.1"
tokio-util = { version = "0.7", features = ["io"] }

# macOS-only: in-process Continuity Camera (Insert-from-iPhone) via AppKit.
# Versions match what tauri/window-vibrancy already pull transitively, so no
# new top-level crate graph nodes — Cargo will dedupe.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSMenu",
    "NSMenuItem",
    "NSResponder",
    "NSView",
    "NSWindow",
    "NSApplication",
    "NSImage",
    "NSPasteboard",
    "NSPasteboardItem",
    "NSBitmapImageRep",
    "NSImageRep",
    "NSUserInterfaceItemIdentification",
    "NSEvent",
] }
objc2-foundation = { version = "0.3", features = [
    "NSArray",
    "NSString",
    "NSURL",
    "NSDictionary",
    "NSGeometry",
] }

